appId: tech.jala.android.lite
name: AT32CRUD
tags:
  - ATSAMPLING
---
- clearState
- launchApp

- runFlow: login_email.yaml

#pilih field Automation Flutter
- tapOn:
    point: 150,220

- tapOn:
    text: "Automation Flutter"
    
- assertVisible:
    text: "Kolam"

- tapOn:
    text: "Lite"
    repeat: 2
    delay: 5000
    
#pilih menu kolam
- tapOn:
    point: 235, 681

- tapOn:
    text: "Kolam"
    repeat: 3
    delay: 5000
    
 #tap A1
- tapOn:
    point: 57, 375
    
#tap sampling
- tapOn:
    point: 435, 155

- tapOn: 
    text: "Catatan"

- scroll 

-  scrollUntilVisible:
    element:
      text: "Catatan" #or any other selecto
      index: 0
    direction: DOWN
   
- tapOn: 
    text: "Catatan"
- inputText: 
    text: "Test data sampling"
    label: "Ketik test data sampling" 

- hideKeyboard

- tapOn: 
    text: "0"
    label: "Masukkan field MBW 1,15"
- inputText: 
    text: "1,15"
    label: "Ketik 1,15"

- hideKeyboard 

- tapOn: "Simpan"

#Pilih icon [edit] pada data current date
- tapOn:
    point: 548,282

- scroll

-  scrollUntilVisible:
    element:
      text: "Test data sampling" # or any other selecto
    direction: DOWN
   
- tapOn: 
    text: "Test data sampling"
    label: "Masukkan Catatan edit data testing"

- eraseText 

- inputText: 
    text: "edit data sampling"
    label: "Ketik edit data sampling" 

- hideKeyboard

 # Input field 'MBW' = 0,75
- tapOn: 
    text: "1.15"

- eraseText 

- inputText: 
    text: "0,75"
    label: "Ketik 0,75"

- hideKeyboard 
- tapOn: "Simpan"

#Pilih icon [edit] pada data current date
- tapOn:
    point: 548,282

- tapOn:
    text: "Hapus"

# Tap Ya, Saya Yakin
- tapOn: "Ya, Saya Yakin"



