 appId: tech.jala.android.lite
---
- launchApp
- tapOn: "Masuk"
- tapOn: "Masuk dengan no HP atau Email"
- tapOn: "No. Handphone atau email"
- inputText: "automation_1@gmail.com"
- tapOn: "Kata Sandi"
- inputText: "jalaistimewa"
- tapOn: "Masuk"
- tapOn:
    text: "Masuk"
    index: 1
- tapOn:
    point : "970,2240"
- tapOn: "Pengaturan"
- tapOn: "Hapus Akun"
- tapOn: "Ya, Saya Yakin"
- inputText: "jalaistimewa"
- tapOn:
    point : 78, 1305
- tapOn: "Hapus"
